--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/clerk-js": "^5.72.0",
     "@clerk/nextjs": "^6.25.0",
     "@nextui-org/progress": "^2.2.6",
+    "@nextui-org/react": "^2.6.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-slider": "^1.3.5",
@@ -19,14 +20,17 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@tanstack/react-query": "^5.83.0",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "langchain": "^0.3.29",
     "lucide-react": "^0.525.0",
+    "marked": "^16.0.0",
     "next": "15.4.1",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-audio-player": "^0.17.0",
+    "react-color": "^2.19.3",
     "react-dom": "19.1.0",
     "react-dropzone": "^14.3.8",
     "retell-client-js-sdk": "^2.0.7",
