--- a/package.json
+++ b/package.json
@@ -11,10 +11,19 @@
   "dependencies": {
     "@clerk/clerk-js": "^5.72.0",
     "@clerk/nextjs": "^6.25.0",
+    "@mui/material": "^7.2.0",
+    "@mui/x-charts": "^8.8.0",
     "@nextui-org/progress": "^2.2.6",
     "@nextui-org/react": "^2.6.11",
+    "@prisma/client": "^6.12.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-context-menu": "^2.2.15",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.2.7",
