--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/clerk-js": "^5.72.0",
     "@clerk/nextjs": "^6.25.0",
+    "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.2.0",
     "@mui/x-charts": "^8.8.0",
     "@nextui-org/progress": "^2.2.6",
@@ -26,6 +27,7 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@tanstack/react-query": "^5.83.0",
